--- a/src/App.css
+++ b/src/App.css
@@ -3,22 +3,22 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 100px;
 }
 
 .App-header {
   background-color: #222;
   height: 150px;
-  padding: 20px;
+  width: 100%;
+  padding: 20px 20px 20px 0;
   color: white;
+}
+
+.App-header .logo {
+  width: 120px;
+  margin: 0 auto;
 }
 
 .App-intro {
   font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
